--- a/WebShop.API/Scripts/angular/views/root.html
+++ b/WebShop.API/Scripts/angular/views/root.html
@@ -1,320 +1,59 @@
-﻿<div class="tabbed">
-    <!-- First Tab Content -->
-    <div class="tab-content" style="display:block;">
-        <div class="items">
-            <div class="cl">&nbsp;</div>
-            <ul>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image1.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image2.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image3.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image4.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image4.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image3.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image2.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image1.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-            </ul>
-            <div class="cl">&nbsp;</div>
+﻿<div class="tabs">
+    <ul>
+        <li><a href="javascript:void(0)" ng-class="'active': filter == 'herre'" ng-click="filter = 'herre';"><span>Herre</span></a></li>
+        <li><a href="javascript:void(0)" ng-class="'active': filter == 'dame'" ng-click="filter = 'dame';"><span>Damer</span></a></li>
+        <li><a href="javascript:void(0)" ng-class="'active': filter == 'barn'" ng-click="filter = 'barn';"><span>Barn</span></a></li>
+    </ul>
+</div>
+<!-- Tabs -->
+<!-- Container -->
+<div id="container">
+    <div class="tabbed">
+        <!-- First Tab Content -->
+        <div class="tab-content" style="display:block;">
+            <div class="items">
+                <div class="cl">&nbsp;</div>
+                <ul>
+                    <li ng-repeat="product in products | filter:filter">
+                        <div class="image"><a href="#"><img src="{{product.imageSource}}" width="125" /></a></div>
+                        <p>{{product.title}}</p>
+                        <p class="price">Pris: <strong>{{product.price}},-</strong></p>
+                    </li>
+                </ul>
+                <div class="cl">&nbsp;</div>
+            </div>
         </div>
-    </div>
-    <!-- End First Tab Content -->
-    <!-- Second Tab Content -->
-    <div class="tab-content">
-        <div class="items">
-            <div class="cl">&nbsp;</div>
-            <ul>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image2.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image2.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image2.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image2.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image1.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image1.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image1.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image1.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-            </ul>
-            <div class="cl">&nbsp;</div>
+        <!-- End First Tab Content -->
+        <!-- Second Tab Content -->
+        <div class="tab-content">
+            <div class="items">
+                <div class="cl">&nbsp;</div>
+                <ul>
+                    <li ng-repeat="product in products | filter:{category : 'dame'}">
+                        <div class="image"><a href="#"><img src="{{product.imageSource}}" width="125" /></a></div>
+                        <p>{{product.title}}</p>
+                        <p class="price">Pris: <strong>{{product.price}},-</strong></p>
+                    </li>
+                </ul>
+                <div class="cl">&nbsp;</div>
+            </div>
         </div>
-    </div>
-    <!-- End Second Tab Content -->
-    <!-- Third Tab Content -->
-    <div class="tab-content">
-        <div class="items">
-            <div class="cl">&nbsp;</div>
-            <ul>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image3.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image3.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image3.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image3.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image4.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image4.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image4.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image4.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image2.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image2.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image2.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image2.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image1.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image1.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image1.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-                <li>
-                    <div class="image"> <a href="#"><img src="css/images/image1.jpg" alt="" /></a> </div>
-                    <p>
-                        Item Number: <span>125515</span><br />
-                        Size List : <span>8/8.5/9.5/10/11</span><br />
-                        Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">Wholesale Price: <strong>53 USD</strong></p>
-                </li>
-            </ul>
-            <div class="cl">&nbsp;</div>
+        <!-- End Second Tab Content -->
+        <!-- Third Tab Content -->
+        <div class="tab-content">
+            <div class="items">
+                <div class="cl">&nbsp;</div>
+                <ul>
+                    <li ng-repeat="product in products | filter:{category : 'barn'}">
+                        <div class="image"><a href="#"><img src="{{product.imageSource}}" width="125" /></a></div>
+                        <p>{{product.title}}</p>
+                        <p class="price">Pris: <strong>{{product.price}},-</strong></p>
+                    </li>
+                </ul>
+                <div class="cl">&nbsp;</div>
+            </div>
         </div>
+        <!-- End Third Tab Content -->
     </div>
-    <!-- End Third Tab Content -->
+
 </div>
