--- a/WebShop.API/Scripts/angular/views/root.html
+++ b/WebShop.API/Scripts/angular/views/root.html
@@ -1,8 +1,8 @@
 ﻿<div class="tabs">
     <ul>
-        <li><a href="javascript:void(0)" ng-class="'active': filter == 'herre'" ng-click="filter = 'herre';"><span>Herre</span></a></li>
-        <li><a href="javascript:void(0)" ng-class="'active': filter == 'dame'" ng-click="filter = 'dame';"><span>Damer</span></a></li>
-        <li><a href="javascript:void(0)" ng-class="'active': filter == 'barn'" ng-click="filter = 'barn';"><span>Barn</span></a></li>
+        <li><a href="javascript:void(0)" ng-class="{'active': filter == 'herre'}" ng-click="filter = 'herre';"><span>Herre</span></a></li>
+        <li><a href="javascript:void(0)" ng-class="{'active': filter == 'dame'}" ng-click="filter = 'dame';"><span>Damer</span></a></li>
+        <li><a href="javascript:void(0)" ng-class="{'active': filter == 'barn'}" ng-click="filter = 'barn';"><span>Barn</span></a></li>
     </ul>
 </div>
 <!-- Tabs -->
