--- a/WebShop.API/Scripts/angular/views/item.html
+++ b/WebShop.API/Scripts/angular/views/item.html
@@ -1,4 +1,4 @@
-﻿<div class="container product-detail">
+﻿<div id="container" class="product-detail">
     <h2 class="title">{{product.title}}</h2>
     <img src="{{product.imageSource}}" alt="" />
     <p>{{product.description}}</p>
